# operator-github-webhook

./: .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  Chart.yaml  Makefile  README.md  index.yaml  pyproject.toml  values.yaml
.github/: publish.yaml  renovate.json5
.github/workflows/: audit.yaml  changelog.yaml  main.yaml
ci/: config.yaml  k8s-logs  requirements.txt
docker/: .prospector.yaml  Dockerfile  Pipfile  operator  operator.py  operator_.py  pyproject.toml  requirements.txt
templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  crd.yaml  deployment.yaml  serviceaccount.yaml
tests/: expected.yaml  test_operator.py  values.yaml  webhook-duplicate.yaml  webhook-form.yaml  webhook.yaml
