[tool.mypy]
python_version = "3.12"
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
ignore_missing_imports = true
disallow_untyped_defs = true
strict_optional = true
strict = true

[tool.poetry]
name = 'operator-github-webhook'
version = '0.0.0'
description = 'Not used'
authors = []

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
kopf = "1.37.5"
requests = "2.32.3"
urllib3 = { version = "2.3.0", optional = true }
aiohttp = "3.11.14"
idna = { version = "3.10", optional = true }
certifi = "2025.1.31"
python-json-logger = "3.3.0"

[tool.poetry.dev-dependencies]
prospector = { version = "1.16.1", extras = ["with_bandit", "with_mypy", "with_ruff"] }
prospector-profile-duplicated = "1.10.5"
prospector-profile-utils  = "1.22.3"
types-requests = "2.32.0.20250328"
types-pyyaml = "6.0.12.20250326"
