[tool.ruff.lint]
select = []
ignore = ["ANN401", "C90", "D100", "D104", "D105", "D107", "D200", "D202", "D207", "D208", "D212", "E501", "EM101", "EM102", "ERA001", "FA", "FBT001", "FBT002", "FIX002", "I001", "PERF203", "PLR09", "PLR2004", "Q000", "S101", "SIM105", "T201", "TD002", "W293"]
extend-select = ["UP", "I", "S", "B", "ALL"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**" = ["ANN", "ARG", "D", "E722", "INP001", "RET", "RUF012", "RUF100", "SLF"]
"**/tests/**" = ["ANN", "ARG", "D", "E722", "INP001", "RET", "RUF012", "RUF100", "SLF"]
"**/test_*.py" = ["ANN", "ARG", "D", "E722", "INP001", "RET", "RUF012", "RUF100", "SLF"]
"**/*_test.py" = ["ANN", "ARG", "D", "E722", "INP001", "RET", "RUF012", "RUF100", "SLF"]

[tool.mypy]
python_version = "3.12"
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
ignore_missing_imports = true
disallow_untyped_defs = true
strict_optional = true
strict = true

[tool.poetry]
name = 'operator-github-webhook'
version = '0.0.0'
description = 'Not used'
authors = []

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
kopf = "1.38.0"
requests = "2.32.4"
urllib3 = "2.5.0"
aiohttp = "3.12.14"
idna = { version = "3.10", optional = true }
certifi = "2025.8.3"
python-json-logger = "3.3.0"

[tool.poetry.dev-dependencies]
prospector = { version = "1.17.3", extras = ["with_bandit", "with_mypy", "with_ruff"] }
prospector-profile-duplicated = "1.10.5"
prospector-profile-utils  = "1.26.4"
types-requests = "2.32.4.20250611"
types-pyyaml = "6.0.12.20250516"
